--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div class="overlay row justify-content-center text-white" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
         <div class="col-lg-8 mx-3 text-center">
             <!-- Forum Heading and Copy -->
-            <h1 class="display-4 fw-bold mb-3">DAWheadz: Produce music, drop bomb tracks...</h1>
+            <h1 class="display-4 fw-bold mb-3">DAWheadz: Produce music, bomb tracks...</h1>
             <p class="lead">
-                Here is a free, modern place to share info, ideas, knowledge about digital music production.
+                DAWheadz is a free, modern, place, to share info, ideas, and knowledge about digital music production.
             </p>
             <p>
                 A DAW (Digital Audio Workstation) is a piece of software which allows you to edit audio files and music. Examples of popular DAW's are: Ableton Live, Logic Pro, Reaper, Pro Tools, FL Studio, Garage Band. 
@@ -36,9 +36,7 @@
             <p>The forum is a free community resource. At this point in time there is also no advertising present on the site.</p>
 
             <!-- Forum Button -->
-            <div class="mt-4">
-                <a class="btn btn-primary btn-lg" href="https://talk.allotmentforum.com">Enter Forum</a>
-            </div>
+
 
             <!-- Forum Logo -->
             <div class="mt-4">
@@ -46,6 +44,11 @@
                     <img src="dawheadz-logo.png" alt="Dawheadz Forum Logo" class="img-fluid img-30">
                 </a>
             </div>
+
+            <div class="mt-4">
+                <a class="btn btn-primary btn-lg" href="https://talk.dawheadz.com">Enter Forum</a>
+            </div>
+
         </div>
     </div>
 </div>
