update text and css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 A DAW (Digital Audio Workstation) is a piece of software which allows you to edit audio files and music. Examples of popular DAW's are: Ableton Live, Logic Pro, Reaper, Pro Tools, FL Studio, Garage Band. 
               The forum is dedicated to all discussion around all topics related to music creation and production. 
             </p>
-            <p>The forum is a free community resource. At this point in time there is also no advertising present on the site.</p>
+            <p>The forum is a free community resource. Enjoy!</p>
 
             <!-- Forum Button -->
 
