update logo + add gtag

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 DAWheadz is a free, modern, place, to share info, ideas, and knowledge about digital music production.
             </p>
             <p>
-                A DAW (Digital Audio Workstation) is a piece of software which allows you to edit audio files and music. Examples of popular DAW's are: Ableton Live, Logic Pro, Reaper, Pro Tools, FL Studio, Garage Band. 
+                A DAW (Digital Audio Workstation) is a piece of software which allows you to edit audio files and music. Examples of popular DAWs are: Ableton Live, Logic Pro, Reaper, Pro Tools, FL Studio, Garage Band.
               The forum is dedicated to all discussion around all topics related to music creation and production. 
             </p>
             <p>The forum is a free community resource. Enjoy!</p>
@@ -54,5 +54,14 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HFPLGHXPJW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HFPLGHXPJW');
+</script>
 </body>
 </html>
