--- a/index.html
+++ b/index.html
@@ -25,15 +25,10 @@
     <div class="overlay row justify-content-center text-white" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
         <div class="col-lg-8 mx-3 text-center">
             <!-- Forum Heading and Copy -->
-            <h1 class="display-4 fw-bold mb-3">DAWheadz: bomb tracks, not houses...</h1>
+            <h1 class="display-4 fw-bold mb-3">DAWheadz: Our DAW is open...</h1>
             <p class="lead">
-                DAWheadz is a free, modern, place, to share info, ideas, and knowledge about digital music production.
+                DAWheadz is a free, open, place, to share info, ideas, and knowledge about digital music production.
             </p>
-            <p>
-                A DAW (Digital Audio Workstation) is a piece of software which allows you to edit audio files and music. Examples of popular DAWs are: Ableton Live, Logic Pro, Reaper, Pro Tools, FL Studio, Garage Band.
-              The forum is dedicated to all discussion around all topics related to music creation and production. 
-            </p>
-            <p>The forum is a free community resource. Enjoy!</p>
 
             <!-- Forum Button -->
 
@@ -48,7 +43,12 @@
             <div class="mt-4">
                 <a class="btn btn-primary btn-lg" href="https://talk.dawheadz.com">Enter Forum</a>
             </div>
-
+<div class="col-lg-8 mx-3 text-center">
+            <p>
+                A DAW (Digital Audio Workstation) is a piece of software which allows you to edit audio files and music. Examples of popular DAWs are: Ableton Live, Logic Pro, Reaper, Pro Tools, FL Studio, Garage Band.
+              The forum is dedicated to all discussion around all topics related to music creation and production.
+            </p>
+</div>
         </div>
     </div>
 </div>
