--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="overlay row justify-content-center text-white" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
         <div class="col-lg-8 mx-3 text-center">
             <!-- Forum Heading and Copy -->
-            <h1 class="display-4 fw-bold mb-3">DAWheadz: Our DAW is open...</h1>
+            <h1 class="display-4 fw-bold mb-3"><span class="daw">DAW</span><span class="headz">headz</span>: Our DAW is open...</h1>
             <p class="lead">
                 DAWheadz is a free, open, place, to share info, ideas, and knowledge about digital music production.
             </p>
